--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <div class="w3-padding-large" id="main">
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-        <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> John Doe.</h1>
-        <p>Photographer and Web Designer.</p>
+        <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Gaurav Toravane.</h1>
+        <p>Software Developer.</p>
         <img src="/gt.jpg" alt="boy" class="w3-image" width="992" height="1108">
     </header>
 
@@ -69,35 +69,43 @@
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
         <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
-        <p class="w3-wide">Photography</p>
+        <p class="w3-wide">Scala</p>
         <div class="w3-white">
             <div class="w3-dark-grey" style="height:28px;width:95%"></div>
         </div>
-        <p class="w3-wide">Web Design</p>
+        <p class="w3-wide">Python</p>
         <div class="w3-white">
             <div class="w3-dark-grey" style="height:28px;width:85%"></div>
         </div>
-        <p class="w3-wide">Photoshop</p>
+        <p class="w3-wide">C & C++</p>
         <div class="w3-white">
-            <div class="w3-dark-grey" style="height:28px;width:80%"></div>
+            <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+        </div>
+        <p class="w3-wide">Front-end Technologies(HTML & CSS)</p>
+        <div class="w3-white">
+            <div class="w3-dark-grey" style="height:28px;width:85%"></div>
+        </div>
+        <p class="w3-wide">Server Technologies(Flask,Bottle,Django)</p>
+        <div class="w3-white">
+            <div class="w3-dark-grey" style="height:28px;width:65%"></div>
+        </div>
+        <p class="w3-wide">JavaScript</p>
+        <div class="w3-white">
+            <div class="w3-dark-grey" style="height:28px;width:90%"></div>
         </div><br>
 
         <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
             <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">11+</span><br>
-                Partners
+                <span class="w3-xlarge">10+</span><br>
+                Github Commits
             </div>
             <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">55+</span><br>
+                <span class="w3-xlarge">3</span><br>
                 Projects Done
             </div>
             <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">89+</span><br>
+                <span class="w3-xlarge">2</span><br>
                 Happy Clients
-            </div>
-            <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">150+</span><br>
-                Meetings
             </div>
         </div>
 
