--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <img src="/gt.jpg" style="width:100%">
+    <img src="/hello-world/gt.jpg" style="width:100%">
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
         <i class="fa fa-home w3-xxlarge"></i>
         <p>HOME</p>
@@ -57,7 +57,7 @@
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> "Gaurav Toravane."</h1>
         <p>Software Developer.</p>
-        <img src="/gt.jpg" alt="boy" class="w3-image" width="992" height="1108">
+        <img src="/hello-world/gt.jpg" alt="boy" class="w3-image" width="992" height="1108">
     </header>
 
     <!-- About Section -->
