--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
         <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span>Gaurav Toravane.</h1>
         <p>Software Developer.</p>
-        <img src="/hello-world/gt.jpg" alt="boy" class="w3-image" width="992" height="1108">
+        <img src="/hello-world/gt.jpg" alt="boy" class="w3-image" width="99" height="110">
     </header>
 
     <!-- About Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-text-light-grey">My Name</h2>
+        <h2 class="w3-text-light-grey">About me</h2>
         <hr style="width:200px" class="w3-opacity">
         <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
@@ -139,7 +139,7 @@
     <!--</div>-->
 
     <!-- Footer -->
-    <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+    <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge" id="contact">
         <h6>Connect via:</h6>
         <!--<i class="fa fa-facebook-official w3-hover-opacity"></i>-->
         <!--<i class="fa fa-instagram w3-hover-opacity"></i>-->
