--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <i class="fa fa-user w3-xxlarge"></i>
         <p>ABOUT</p>
     </a>
-    <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+<!--     <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
         <i class="fa fa-eye w3-xxlarge"></i>
         <p>PHOTOS</p>
-    </a>
+    </a> -->
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
         <i class="fa fa-envelope w3-xxlarge"></i>
         <p>CONTACT</p>
@@ -55,9 +55,9 @@
 <div class="w3-padding-large" id="main">
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-        <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span>Gaurav Toravane.</h1>
+        <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Gaurav Toravane.</h1>
         <p>Software Developer.</p>
-        <img src="/hello-world/gt.jpg" alt="boy" class="w3-image" width="300" height="500">
+        <img src="/hello-world/gt.jpg" alt="boy" class="w3-image" width="450" height="650">
     </header>
 
     <!-- About Section -->
