--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <i class="fa fa-user w3-xxlarge"></i>
         <p>ABOUT</p>
     </a>
-<!--     <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-        <i class="fa fa-eye w3-xxlarge"></i>
-        <p>PHOTOS</p>
-    </a> -->
+    <!--     <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <i class="fa fa-eye w3-xxlarge"></i>
+            <p>PHOTOS</p>
+        </a> -->
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
         <i class="fa fa-envelope w3-xxlarge"></i>
         <p>CONTACT</p>
@@ -46,8 +46,8 @@
     <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
         <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
         <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-<!--         <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a> -->
-        <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
+        <!--<a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>-->
+        <!--<a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>-->
     </div>
 </div>
 
@@ -64,10 +64,7 @@
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
         <h2 class="w3-text-light-grey">About me</h2>
         <hr style="width:200px" class="w3-opacity">
-        <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
+        <p>SIntermediate Software Developer. Experience in OOPs, Functional programming, Server-side of applications and front-end Technologies. Looking to gain experience by learning and teaching peers. I believe that Technology has made world a better place</p>
         <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
         <p class="w3-wide">Scala</p>
         <div class="w3-white">
@@ -107,36 +104,36 @@
                 <span class="w3-xlarge">2</span><br>
                 Happy Clients
             </div>
+            <div class="w3-quarter w3-section">
+                <span class="w3-xlarge">10+</span><br>
+                Technologies
+            </div>
         </div>
 
         <button class="w3-button w3-light-grey w3-padding-large w3-section">
-            <i class="fa fa-download"></i> Download Resume
+            <a href="ResumeGauravToravane.pdf" download>Download Resume</a>
         </button>
         <!-- End About Section -->
     </div>
 
-    <!-- Portfolio Section -->
-    <!--<div class="w3-padding-64 w3-content" id="photos">-->
-        <!--<hr style="width:200px" class="w3-opacity">-->
+    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="photos">
+        <h4>My Live Projects</h4>
+    <hr style="width:200px" class="w3-opacity">
+        <h3 class="w3-medium"><a href="https://www.linkedin.com/in/gauravtoravane/" target="_blank" class="w3-hover-text-green">Apple Stock Daily</a></h3>
 
-        <!--&lt;!&ndash; Grid for photos &ndash;&gt;-->
-        <!--<div class="w3-row-padding" style="margin:0 -16px">-->
-            <!--&lt;!&ndash;<div class="w3-half">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/wedding.jpg" style="width:100%">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/rocks.jpg" style="width:100%">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/sailboat.jpg" style="width:100%">&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+    <div class="w3-half">
 
-            <!--&lt;!&ndash;<div class="w3-half">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/underwater.jpg" style="width:100%">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/chef.jpg" style="width:100%">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/wedding.jpg" style="width:100%">&ndash;&gt;-->
-                <!--&lt;!&ndash;<img src="/w3images/p6.jpg" style="width:100%">&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash; End photo grid &ndash;&gt;-->
-        <!--</div>-->
-        <!--&lt;!&ndash; End Portfolio Section &ndash;&gt;-->
-    <!--</div>-->
+    </div>
+
+    <div class="w3-half">
+
+    </div>
+    <!-- End photo grid -->
+    </div>
+    <!-- End Portfolio Section -->
+    </div>
 
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge" id="contact">
@@ -147,10 +144,12 @@
         <!--<i class="fa fa-pinterest-p w3-hover-opacity"></i>-->
         <!--<i class="fa fa-twitter w3-hover-opacity"></i>-->
         <!--<i class="fa fa-linkedin w3-hover-opacity"></i>-->
-        <p class="fa fa-linkedin w3-medium"><a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Linkedin</a></p>
-        <p class="fa fa-facebook-official w3-medium"><a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">facebook</a></p>
-        <p class="fa fa-instagram w3-medium"><a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Instagram</a></p>
-        <p class="fa fa-github w3-medium"><a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">Github</a></p>
+        <h6>gtoravan@buffalo.edu</h6>
+        <h6>gauravtoravane@gmail.com</h6>
+        <p class="fa fa-linkedin w3-medium"><a href="https://www.linkedin.com/in/gauravtoravane/" target="_blank" class="w3-hover-text-green">Linkedin</a></p>
+        <p class="fa fa-facebook-official w3-medium"><a href="https://www.facebook.com/gaurav.toravane.9" target="_blank" class="w3-hover-text-green">facebook</a></p>
+        <p class="fa fa-instagram w3-medium"><a href="https://www.instagram.com/the_sony_guy/" target="_blank" class="w3-hover-text-green">Instagram</a></p>
+        <p class="fa fa-github w3-medium"><a href="https://github.com/gtoravan" target="_blank" class="w3-hover-text-green">Github</a></p>
         <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
         <!-- End footer -->
     </footer>
