--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="photos">
         <h4>My Live Projects</h4>
     <hr style="width:200px" class="w3-opacity">
-        <h3 class="w3-medium"><a href="https://www.linkedin.com/in/gauravtoravane/" target="_blank" class="w3-hover-text-green">Apple Stock Daily</a></h3>
+        <h3 class="w3-medium"><a href="https://www.youtube.com/watch?v=AQnwKYbGc-4" target="_blank" class="w3-hover-text-green">Apple Stock Daily</a></h3>
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
