--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
         <h2 class="w3-text-light-grey">About me</h2>
         <hr style="width:200px" class="w3-opacity">
-        <p>SIntermediate Software Developer. Experience in OOPs, Functional programming, Server-side of applications and front-end Technologies. Looking to gain experience by learning and teaching peers. I believe that Technology has made world a better place</p>
+        <p>Intermediate Software Developer. Experience in OOPs, Functional programming, Server-side of applications and front-end Technologies. Looking to gain experience by learning and teaching peers. I believe that Technology has made world a better place</p>
         <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
         <p class="w3-wide">Scala</p>
         <div class="w3-white">
